# module_mpiPlayground

./: CMakeLists.txt  boostMpiApp.cpp  testApp.cpp
